<resources>
    <string name="app_name">Calculator</string>
    <color name="orange">#f4ac1c</color>
    <color name="white">#f9fefc</color>
    <color name="grey">#949494</color>

    <string name="clear">C</string>
    <string name="plus_minus">+/-</string>
    <string name="delete">del</string>
    <string name="enter">=</string>
    <string name="comma">.</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
